tests/neg/semantic_variadic_builtin_outside_function.baa
// RUN: expect-fail
// EXPECT: مسموح فقط داخل دالة متغيرة المعاملات

صحيح الرئيسية() {
    عدم* قائمة = عدم.
    بدء_معاملات(قائمة، قائمة).
    إرجع ٠.
}
